--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-dom": "^1.0.2",
     "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
